--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -14,15 +14,175 @@
         </uib-slide>
     </uib-carousel>
 </div>
-<section id="who-are" class="section_padding">
+<section class="section_padding">
     <div class="container">
-        <div class="col-md-4 col-sm-4">
-            <img post-image="{{ Home.about.urlImages.original }}" alt="{{ Home.about.title }}"/>
-        </div>
-        <div class="col-md-8 col-sm-8 description">
-            <h2>{{ Home.about.title }}</h2>
+        <div class="col-md-8">
+            <ul class="nav nav-pills">
+                <li class="active"><a data-toggle="pill" href="#home">Destinos</a></li>
+                <li><a data-toggle="pill" href="#menu1">Paquetes</a></li>
+                <li><a data-toggle="pill" href="#menu2">Excursiones</a></li>
+            </ul>
 
-            <p class="text-justify">{{ Home.about.excerpt }}</p>
+            <div class="tab-content">
+                <div id="home" class="tab-pane fade in active">
+                    <div class="col-md-12 no-padding">
+                        <div class="col-md-4 no-padding">
+                            <div class="box-default">
+                                <img src="img/img-default.jpg" alt=""/>
+
+                                <div class="description">
+                                    <h3>Cancún</h3>
+                                    <h5>Quintana Roo</h5>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 no-padding">
+                            <div class="box-default">
+                                <img src="img/img-default.jpg" alt=""/>
+
+                                <div class="description">
+                                    <h3>Cancún</h3>
+                                    <h5>Quintana Roo</h5>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 no-padding">
+                            <div class="box-default">
+                                <img src="img/img-default.jpg" alt=""/>
+
+                                <div class="description">
+                                    <h3>Cancún</h3>
+                                    <h5>Quintana Roo</h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div id="menu1" class="tab-pane fade">
+                    <div class="col-md-12 no-padding">
+                        <div class="col-md-4 no-padding">
+                            <div class="box-default">
+                                <img src="img/img-default.jpg" alt=""/>
+
+                                <div class="description">
+                                    <h3>Cancún</h3>
+                                    <h5>Quintana Roo</h5>
+                                    <h5>$999.00 Precio por persona/noche</h5>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 no-padding">
+                            <div class="box-default">
+                                <img src="img/img-default.jpg" alt=""/>
+
+                                <div class="description">
+                                    <h3>Cancún</h3>
+                                    <h5>Quintana Roo</h5>
+                                    <h5>$999.00 Precio por persona/noche</h5>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 no-padding">
+                            <div class="box-default">
+                                <img src="img/img-default.jpg" alt=""/>
+
+                                <div class="description">
+                                    <h3>Cancún</h3>
+                                    <h5>Quintana Roo</h5>
+                                    <h5>$999.00 Precio por persona/noche</h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div id="menu2" class="tab-pane fade">
+                    <div class="col-md-12 no-padding">
+                        <div class="col-md-4 no-padding">
+                            <div class="box-default">
+                                <img src="img/img-default.jpg" alt=""/>
+
+                                <div class="description">
+                                    <h3>Cancún</h3>
+                                    <h5>Quintana Roo</h5>
+                                    <h5>$999.00 Precio por persona/noche</h5>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 no-padding">
+                            <div class="box-default">
+                                <img src="img/img-default.jpg" alt=""/>
+
+                                <div class="description">
+                                    <h3>Cancún</h3>
+                                    <h5>Quintana Roo</h5>
+                                    <h5>$999.00 Precio por persona/noche</h5>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 no-padding">
+                            <div class="box-default">
+                                <img src="img/img-default.jpg" alt=""/>
+
+                                <div class="description">
+                                    <h3>Cancún</h3>
+                                    <h5>Quintana Roo</h5>
+                                    <h5>$999.00 Precio por persona/noche</h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Sidebar -->
+        <div class="col-md-4">
+            <div class="box-widget">
+                <div class="box-widget-header">
+                    Contáctanos
+                </div>
+                <div class="box-widget-container">
+                    <h2>Sucursal Lorems impsum</h2>
+
+                    <h3><a href="tel:013535317300"><i class="fa fa-phone"></i> 01 353 531 7300</a></h3>
+
+                    <h3><a href="tel:3531117379"><i class="fa fa-whatsapp"></i> 353 111 73 79</a></h3>
+
+                    <h2>Sucursal Lorem tolem</h2>
+
+                    <h3><a href="tel:013535317300"><i class="fa fa-phone"></i> 01 353 531 7300</a></h3>
+
+                    <h3><a href="tel:3531117379"><i class="fa fa-whatsapp"></i> 353 111 73 79</a></h3>
+
+                    <h2>Correo</h2>
+
+                    <h3><a href="mailto:info@viajescoral.com.mx"><i class="fa fa-envelope"></i> info@viajescoral.com.mx</a>
+                    </h3>
+
+                    <h2>Síguenos en</h2>
+
+                    <h3><a href="https://www.facebook.com/viajes.coral.3/"><i class="fa fa-facebook-square"></i>
+                        @viajes.coral.3</a></h3>
+                </div>
+            </div>
+            <div class="box-widget">
+                <div class="box-widget-header">
+                    Envíanos un mensaje
+                </div>
+                <div class="box-widget-container">
+                    <form action="">
+                         <div class="form-group">
+                            <input type="email" class="form-control" id="InputName" placeholder="Nombre">
+                        </div>
+                        <div class="form-group">
+                            <input type="email" class="form-control" id="InputEmail1" placeholder="Correo">
+                        </div>
+                        <div class="form-group">
+                            <textarea name="text" id="" cols="100%" rows="4" class="form-control"></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-block btn-green-clear">Enviar mensaje</button>
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
 </section>
@@ -31,9 +191,11 @@
     <div class="container-fluid no-padding">
         <div class="col-xs-12 col-sm-12 col-md-12 boxes-project no-padding">
             <div ng-repeat="service in Home.services" class="col-md-6 col-sm-6 no-padding">
-                <a post-link="{ link: {url: service.link, target: '_self'} }" ui-sref="post_detail({slug: service.slug })">
+                <a post-link="{ link: {url: service.link, target: '_self'} }"
+                   ui-sref="post_detail({slug: service.slug })">
                     <div class="recent-work-wrap back-image"
-                         style="background-image:url('{{ service.urlImages.medium ? service.urlImages.medium : 'http://localhost:8080/img/img-default.jpg'  }}')">
+                         style="background-image:url('
+                                 {{ service.urlImages.medium ? service.urlImages.medium : 'http://localhost:8080/img/img-default.jpg'  }}')">
                         <div class="titles"><h3>{{ service.title }}</h3></div>
                     </div>
                 </a>
