--- a/app/templates/partials/footer.html
+++ b/app/templates/partials/footer.html
@@ -1,5 +1,5 @@
 <div class="container">
     <p class="text-center text">
-        2016 - Loredo & Asociados
+        Viajes Coral · 2016
     </p>
 </div>
