--- a/app/templates/partials/sidebar.html
+++ b/app/templates/partials/sidebar.html
@@ -1,33 +1,47 @@
-<!-- Blog Search -->
-<!--
-<div class="box-sidebar" ng-controller="GetQuerySearchCtrl as search">
-    <div class="box-header">
-        Busqueda
-    </div>
-    <div class="input-group">
-        <form class="navbar-form no-padding" role="search" ng-submit="search.globalSearch()">
-            <div class="input-group">
-                <input type="text" class="form-control" placeholder="Buscar..." name="query"
-                       ng-model="search.searchTerm" required>
-
-                <div class="input-group-btn">
-                    <button class="btn btn-search" type="submit"><i class="glyphicon glyphicon-search"></i>
-                    </button>
-                </div>
-            </div>
-        </form>
-    </div>
-</div>
--->
-<div class="box-sidebar">
-    <div class="box-header">
+<div class="box-widget">
+    <div class="box-widget-header">
         Contáctanos
     </div>
-    <div class="box-body">
-        <ul class="list-group">
-            <li class="list-group-item"><a href="mailto:info@viveenarmonia.com.mx" style="font-size: 12px;"><i class="fa fa-envelope"></i> info@loredoyasociados.com.mx</a></li>
-            <li class="list-group-item"><a href="tel:3338801234"><i class="fa fa-phone"></i> (33) 3880 12 34</a></li>
-            <li class="list-group-item"><a href="tel:3338801200"><i class="fa fa-print"></i> Fax (33) 3880 12 00</a></li>
-        </ul>
+    <div class="box-widget-container">
+        <h2>Sucursal Lorems impsum</h2>
+
+        <h3><a href="tel:013535317300"><i class="fa fa-phone"></i> 01 353 531 7300</a></h3>
+
+        <h3><a href="tel:3531117379"><i class="fa fa-whatsapp"></i> 353 111 73 79</a></h3>
+
+        <h2>Sucursal Lorem tolem</h2>
+
+        <h3><a href="tel:013535317300"><i class="fa fa-phone"></i> 01 353 531 7300</a></h3>
+
+        <h3><a href="tel:3531117379"><i class="fa fa-whatsapp"></i> 353 111 73 79</a></h3>
+
+        <h2>Correo</h2>
+
+        <h3><a href="mailto:info@viajescoral.com.mx"><i class="fa fa-envelope"></i> info@viajescoral.com</a>
+        </h3>
+
+        <h2>Síguenos en</h2>
+
+        <h3><a href="https://www.facebook.com/viajes.coral.3/"><i class="fa fa-facebook-square"></i>
+            @viajes.coral.3</a></h3>
+    </div>
+</div>
+<div class="box-widget">
+    <div class="box-widget-header">
+        Envíanos un mensaje
+    </div>
+    <div class="box-widget-container">
+        <form action="">
+            <div class="form-group">
+                <input type="email" class="form-control" id="InputName" placeholder="Nombre">
+            </div>
+            <div class="form-group">
+                <input type="email" class="form-control" id="InputEmail1" placeholder="Correo">
+            </div>
+            <div class="form-group">
+                <textarea name="text" id="" cols="100%" rows="4" class="form-control"></textarea>
+            </div>
+            <button type="submit" class="btn btn-block btn-green-clear">Enviar mensaje</button>
+        </form>
     </div>
 </div>
