--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -1,9 +1,11 @@
+<section class="main-bg-pages" style="background-image: url('../img/imagee.jpg')"></section>
 <section id="content-area" class="content-blog">
     <div class="container">
         <div class="row">
             <div class="col-md-9">
-                <div class="col-md-12 title-post">
-                    <h2 class="title">Blog</h2>
+                <div class="col-md-12 title">
+                    <h2 class="title-single">Blog</h2>
+                    <hr class="divider"/>
                 </div>
 
                 <div class="content-pages" infinite-scroll='Post.getMorePosts()'
