--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -1,3 +1,4 @@
+<section class="main-bg-pages" style="background-image: url('../img/imagee.jpg')"></section>
 <section id="content-contact">
     <div class="container">
         <div class="form-section">
