--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -1,3 +1,4 @@
+<section class="main-bg-pages" style="background-image: url('../img/imagee.jpg')"></section>
 <section id="content-area">
     <div class="container" infinite-scroll='Search.getMorePosts()'
          infinite-scroll-disabled='Search.busy || !Search.next || Search.loadPosts'>
