--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1058,6 +1058,24 @@ color
 .owl-nav {
   display: none;
 }
+.tab-animation > .tab-content {
+  position: relative;
+}
+.tab-animation > .tab-content > .tab-pane {
+  transition: 0.3s linear opacity;
+}
+.tab-animation > .tab-content > .tab-pane.active-remove {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  display: block;
+}
+.tab-animation > .tab-content > .tab-pane.active-remove-active {
+  opacity: 0;
+}
+.tab-animation > .tab-content > .tab-pane.active-add {
+  opacity: 0;
+}
 @media only screen and (min-width: 991px) and (max-width: 1024px) {
   .single_blog .comment-area {
     margin-top: -5px;
