--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -16,7 +16,58 @@
 </div>
 <section class="section_padding">
     <div class="container">
-        <div class="col-md-9">
+        <div class="col-md-9" ng-controller="TabsCtrl as Tab">
+            <uib-tabset active="active" template-url="/templates/partials/tabset.html" class="tab-animation">
+                <uib-tab index="0" heading="Paquetes" select="Tab.Tab1()" template-url="/templates/partials/tab.html">
+                    <div class="col-md-12 no-padding">
+                        <div class="col-md-4 no-padding" ng-repeat="item in Tab.list1">
+                            <div class="box-default">
+                                <a ui-sref="post_detail({slug: item.slug})">
+                                    <div class="box-header" style="background-image: url('{{ item.urlImages.medium }}')"></div>
+
+                                    <div class="description">
+                                        <h3>{{ item.title }}</h3>
+                                        <h5>Quintana Roo</h5>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </uib-tab>
+                <uib-tab index="0" heading="Excursiones" select="Tab.Tab2()" template-url="/templates/partials/tab.html">
+                    <div class="col-md-12 no-padding">
+                        <div class="col-md-4 no-padding" ng-repeat="item in Tab.list2">
+                            <div class="box-default">
+                                <a ui-sref="post_detail({slug: item.slug})">
+                                    <div class="box-header" style="background-image: url('{{ item.urlImages.medium }}')"></div>
+
+                                    <div class="description">
+                                        <h3>{{ item.title }}</h3>
+                                        <h5>Quintana Roo</h5>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </uib-tab>
+                <uib-tab index="0" heading="Destinos" select="Tab.Tab3()" template-url="/templates/partials/tab.html">
+                    <div class="col-md-12 no-padding">
+                        <div class="col-md-4 no-padding" ng-repeat="item in Tab.list3">
+                            <div class="box-default">
+                                <a ui-sref="post_detail({slug: item.slug})">
+                                    <div class="box-header" style="background-image: url('{{ item.urlImages.medium }}')"></div>
+
+                                    <div class="description">
+                                        <h3>{{ item.title }}</h3>
+                                        <h5>Quintana Roo</h5>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </uib-tab>
+            </uib-tabset>
+            <!--
             <ul class="nav nav-pills">
                 <li class="active"><a data-toggle="pill" href="#home">Destinos</a></li>
                 <li><a data-toggle="pill" href="#menu1">Paquetes</a></li>
@@ -249,7 +300,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div>-->
         </div>
         <!-- Sidebar -->
         <div class="col-md-3">
